<resources>
    <string name="app_name">Study Buddies</string>

    <string name="action_sign_in_short">Register</string>

    <string name="minimum_password">Password too short, enter minimum 8 characters!</string>

    <string name="auth_failed">Authentication failed, check your email and password</string>

    <string name="hint_email">Please enter your Email Id</string>
    <string name="hint_password">Please enter your Password</string>
    <string name="hint_username">Please enter your Username</string>

    <string name="btn_login">LOGIN</string>

    <string name="btn_link_to_register">Don\'t have an Account? REGISTER HERE!</string>
    <string name="btn_link_to_login">Already registered. LOGIN HERE!</string>

    <string name="forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="btn_change">Change</string>

    <string name="forgot_password_msg">Enter your registered Email Id to receive password reset instructions.</string>

    <string name="Student">Student</string>
    <string name="Teacher">Teacher</string>
    <string name="Work">Work</string>


    <string-array name="occupation">
        <item>Student</item>
        <item>Professor</item>
        <item>Other</item>
    </string-array>
    <string name="title_activity_settings">Profile Settings</string>

    <!-- Preference Titles -->

    <!-- Messages Preferences -->

    <!-- Sync Preferences -->

    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_detail">DetailActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- TODO: Remove or change this placeholder text -->

</resources>
