<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentTop="true"
    android:orientation="vertical">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/displayimage"
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:src="@drawable/user_img" />

    <TextView
        android:id="@+id/textViewDisplayname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:gravity="center_horizontal|bottom"
        android:text="~~"
        android:textSize="30dp"
        android:textStyle="bold" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/email_edit_text"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true" />

        <EditText
            android:id="@+id/password_edit_text"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true" />

        <EditText
            android:id="@+id/username_edit_text"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_username"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:singleLine="true" />

        <Button
            android:id="@+id/change_ass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:text="@string/btn_change"
            android:textColor="@android:color/white"
            android:textStyle="bold" />



    </LinearLayout>






    <ProgressBar
    android:id="@+id/progressBar1"
    android:layout_width="30dp"
    android:layout_height="30dp"
    android:visibility="gone" />



    <Button
        android:id="@+id/change_img"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="changeImg"
        android:background="@color/colorAccent"
        android:text="Change Image"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/change_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="changeUsername"
        android:background="@color/colorAccent"
        android:text="change username"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/change_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="changeEmail"
        android:background="@color/colorAccent"
        android:text="change email id"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/change_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="changePassword"
        android:background="@color/colorAccent"
        android:text="change password"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/delete_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="deleteAccount"
        android:background="@color/colorAccent"
        android:text="delete account"
        android:textColor="#FFFFFF" />


</LinearLayout>